kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__config_recovery_12.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_expr_string(\"{if True: *a, b = 2}\")"
---
Node {
    node: Config(
        ConfigExpr {
            items: [
                Node {
                    node: ConfigEntry {
                        key: None,
                        value: Node {
                            node: ConfigIfEntry(
                                ConfigIfEntryExpr {
                                    if_cond: Node {
                                        node: NameConstantLit(
                                            NameConstantLit {
                                                value: True,
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 4,
                                        end_line: 1,
                                        end_column: 8,
                                    },
                                    items: [
                                        Node {
                                            node: ConfigEntry {
                                                key: Some(
                                                    Node {
                                                        node: Binary(
                                                            BinaryExpr {
                                                                left: Node {
                                                                    node: Missing(
                                                                        MissingExpr,
                                                                    ),
                                                                    filename: "",
                                                                    line: 1,
                                                                    column: 10,
                                                                    end_line: 1,
                                                                    end_column: 11,
                                                                },
                                                                op: Bin(
                                                                    Mul,
                                                                ),
                                                                right: Node {
                                                                    node: Identifier(
                                                                        Identifier {
                                                                            names: [
                                                                                Node {
                                                                                    node: "a",
                                                                                    filename: "",
                                                                                    line: 1,
                                                                                    column: 11,
                                                                                    end_line: 1,
                                                                                    end_column: 12,
                                                                                },
                                                                            ],
                                                                            pkgpath: "",
                                                                            ctx: Load,
                                                                        },
                                                                    ),
                                                                    filename: "",
                                                                    line: 1,
                                                                    column: 11,
                                                                    end_line: 1,
                                                                    end_column: 12,
                                                                },
                                                            },
                                                        ),
                                                        filename: "",
                                                        line: 1,
                                                        column: 10,
                                                        end_line: 1,
                                                        end_column: 12,
                                                    },
                                                ),
                                                value: Node {
                                                    node: Missing(
                                                        MissingExpr,
                                                    ),
                                                    filename: "",
                                                    line: 1,
                                                    column: 12,
                                                    end_line: 1,
                                                    end_column: 13,
                                                },
                                                operation: Override,
                                                insert_index: -1,
                                            },
                                            filename: "",
                                            line: 1,
                                            column: 12,
                                            end_line: 1,
                                            end_column: 13,
                                        },
                                    ],
                                    orelse: None,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 10,
                            end_line: 1,
                            end_column: 12,
                        },
                        operation: Union,
                        insert_index: -1,
                    },
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 13,
                },
                Node {
                    node: ConfigEntry {
                        key: Some(
                            Node {
                                node: Identifier(
                                    Identifier {
                                        names: [
                                            Node {
                                                node: "b",
                                                filename: "",
                                                line: 1,
                                                column: 14,
                                                end_line: 1,
                                                end_column: 15,
                                            },
                                        ],
                                        pkgpath: "",
                                        ctx: Load,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 14,
                                end_line: 1,
                                end_column: 15,
                            },
                        ),
                        value: Node {
                            node: NumberLit(
                                NumberLit {
                                    binary_suffix: None,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 18,
                            end_line: 1,
                            end_column: 19,
                        },
                        operation: Override,
                        insert_index: -1,
                    },
                    filename: "",
                    line: 1,
                    column: 14,
                    end_line: 1,
                    end_column: 19,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 20,
}

